# NexDynIPC

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  setup.ps1  vcpkg.json
assets/: double_pendulum.json
assets/cylindrical_spin_force/: cylindrical_spin_force.json
assets/distance_limit_regression/: distance_limit_regression.json
assets/double_pendulum/: double_pendulum.json
assets/examples/example_basic_contact/: basic_contact.json  basic_contact.rmd  basic_contact_project_convert_manifest.json
assets/examples/example_gear_system/: gear_system.json  gear_system.xml  gear_system_convert_manifest.json
assets/examples/example_groove_cube/: groove_cube.rmd
assets/examples/example_groove_sphere/: groove_sphere.rmd
assets/examples/example_painlevé_paradox/: painlevé_paradox.rmd
assets/hinge_angle_limit_pendulum/: hinge_angle_limit_pendulum.json
assets/motor_torque_saturation/: motor_torque_saturation.json
assets/position_force_drive_bench/: position_force_drive_bench.json
assets/prismatic_slider_press/: prismatic_slider_press.json
assets/reference_data/double_pendulum/: Link1_Acc.csv  Link1_Pos.csv  Link1_Vel.csv  Link2_Acc.csv  Link2_Pos.csv  Link2_Vel.csv
assets/spherical_attachment_compliance/: spherical_attachment_compliance.json
documents/2026.02.09/: Design_1_Theory_Research.md  Design_2_System_Architecture.md  Design_3_Roadmap_Resources.md  Design_4_External_Libraries.md  设计需求.md
documents/2026.02.10/: Design_App_Headless.md  Design_Dynamics.md  Design_ImplicitNewmark.md  Design_Joints.md  Design_Math.md  Design_Physics.md  DoublePendulum_Summary.md  Implementation_Summary.md  RelatedProjects_Integration.md  Theory_of_Initial_Condition_Analysis_for_Multibody_Systems.md  TimeIntegration_Schemes.md
documents/2026.02.11/: analysis_ipc_toolkit.md  analysis_rigid_ipc.md  detailed_ipc_toolkit_analysis.md  detailed_rigid_ipc_analysis.md  reusable_modules.md
documents/2026.02.12/: PolyFEM_理论文档.md  Rigid_IPC_理论文档.md  刚体动力学模块对比分析.md  功能融合实施路线图.md  功能融合计划.md
documents/2026.02.21/: MuJoCo对NexDynIPC的借鉴建议.md  MuJoCo项目详细解析.md  autodiff项目详细解析.md  polyfem开环控制分析.md  可微物理实现方案.md  基于autodiff的自动微分扩充方案.md  开环控制分析.md  开环控制实现方案.md  控制系统实现汇总.md  旋转副匀速转动实现方案.md  机械手夹取实现-现有与缺失组件分析.md  自动微分扩展设计方案.md
documents/2026.02.22/: NexDynIPC_MuJoCo_IPC_综合整理与TODO.md  hybrid_mujoco_ipc_efficiency_first_design.md  mujoco_physics_core_analysis.md  mujoco_reference_for_nexdynipc.md  mujoco_sdf_gear_analysis.md  nexdynipc_vs_mujoco_derivation_efficiency_accuracy_optimization.md  velocity_drive_energy_adaptation.md  velocity_drive_pendulum_design.md
documents/2026.02.25/: NexDynIPC_项目总结_框架设计与算法理论_2026.02.25.md  SDF融合进入接触检测与接触计算_可行性分析.md  Stark对NexDynIPC参考分析.md  Stark项目深度解析.md  libuipc_项目总结_框架设计与算法理论_2026.02.25.md
documents/2026.02.26/: stark约束与关节工程化迁移规划.md  动力学仿真完整性缺口总结.md
documents/2026.02.27/: NexDynIPC_vs_rigid-ipc_接触完整复刻差异分析.md  RMD解析认知与JSON映射说明.md  RecurDyn RMD 模型数据文件详解与参数规范.md  Stark_SymX符号微分系统参考价值分析.md  stark约束与关节工程化迁移规划.md  动力学仿真完整性缺口总结.md  基于外部IPC实现的接触计算完善方案.md  外部IPC方案对完整性缺口的可行性评估与详细设计.md  接触算例计算能力差距分析.md
documents/2026.02.28/: NexDynIPC_接触链路rigid-ipc完整替换实施规划.md
include/NexDynIPC/App/: JointTests.hpp  SceneLoader.hpp  Simulation.h  Simulation.hpp  StateExporter.h  StateExporter.hpp
include/NexDynIPC/Control/: ExternalForceForm.h  VelocityDriveForm.h
include/NexDynIPC/Dynamics/: IPCSolver.h  IPCSolver.hpp  ImplicitEuler.hpp  RigidBody.h  RigidBody.hpp  TimeIntegrator.hpp  World.h  World.hpp
include/NexDynIPC/Math/: AutoDiff.h  AutoDiff.hpp  AutoDiffExtended.h  AutoDiffTypes.hpp  Interval.hpp  LinearSolver.hpp
include/NexDynIPC/TimeIntegration/: ImplicitEulerIntegrator.h  ImplicitEulerIntegrator.hpp  ImplicitNewmark.hpp
nexdynipc/NexDynIPC/Control/: DampedSpringForm.h  ForceDriveForm.h  LinearVelocityDriveForm.h  PositionDriveForm.h
nexdynipc/NexDynIPC/Dynamics/: IPCSolver.h  TimeIntegrator.h
nexdynipc/NexDynIPC/Math/: AutoDiffTypes.h  AutoDiffUtils.h
nexdynipc/NexDynIPC/TimeIntegration/: ImplicitTimeIntegrator.h
nexdynipc/include/App/: SceneLoader.h  Simulation.h
nexdynipc/include/Control/: JointActuator.h  VelocityDriveForm.h
nexdynipc/include/Dynamics/: IPCSolver.h
nexdynipc/include/Math/: AutoDiffCompatibility.h  Interval.h  LineSearch.h  NewtonSolver.h  SparseUtils.h
nexdynipc/include/TimeIntegration/: ImplicitNewmark.h
nexdynipc/src/: main.cpp
nexdynipc/src/App/: SceneLoader.cpp  Simulation.cpp  StateExporter.cpp
nexdynipc/src/Control/: DampedSpringForm.cpp  ExternalForceForm.cpp  PositionDriveForm.cpp  VelocityDriveForm.cpp
nexdynipc/src/Dynamics/: IPCSolver.cpp
nexdynipc/src/Math/: LineSearch.cpp  NewtonSolver.cpp
nexdynipc/src/TimeIntegration/: ImplicitEulerIntegrator.cpp  ImplicitNewmark.cpp  ImplicitTimeIntegrator.cpp
skills/utest-generator/: SKILL.md
src/: main.cpp
src/App/: JointTests.cpp  SceneLoader.cpp  Simulation.cpp  StateExporter.cpp
src/Control/: ForceDriveForm.cpp  LinearVelocityDriveForm.cpp  VelocityDriveForm.cpp
src/Dynamics/: IPCSolver.cpp  ImplicitEuler.cpp  RigidBody.cpp  World.cpp
src/Dynamics/Forms/: AngleLimitForm.cpp  ConstraintForm.cpp  FrictionForm.cpp  GravityForm.cpp  InertiaForm.cpp
src/Dynamics/Joints/: AngleLimitJoint.cpp  CylindricalJoint.cpp  FixedJoint.cpp  HingeJoint.cpp  Joint.cpp  PrismaticJoint.cpp  (+2 more)
src/Math/: AutoDiff.cpp  LineSearch.cpp  LinearSolver.cpp  NewtonSolver.cpp
src/TimeIntegration/: ImplicitEulerIntegrator.cpp  ImplicitNewmark.cpp  ImplicitTimeIntegrator.cpp
tests/: CMakeLists.txt  main.cpp
tests/app/: test_scene_loader.cpp
tests/control/: test_drive_forms.cpp  test_force_control.cpp  test_velocity_drive_pendulum.cpp
tests/dynamics/: test_joint.cpp
tests/geometry/: test_aabb.cpp  test_bvh.cpp
tests/math/: test_autodiff.cpp  test_autodiff_integration.cpp  test_autodiff_types.cpp  test_interval.cpp
tests/physics/: test_ccd.cpp  test_contact_pipeline.cpp  test_contact_regression.cpp  test_friction.cpp
tools/: README.md  compare_parameters.py  compare_with_reference.py  csv_visualizer.py  rmd_export_to_project.py  run_asset_suite.py
(+71 files in other folders)
